// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Grid slice should correctly render CardGrid component 1`] = `
<div>
  <section
    class="grid-lottie"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container aos-init aos-animate"
      data-aos="fade-up"
      data-testid="card-lottie"
    >
      <ul
        class="grid-lottie__grid"
      />
    </div>
  </section>
</div>
`;

exports[`Card Grid slice should correctly render CardGridWithIcon component 1`] = `
<div>
  <section
    class="grid-lottie"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container aos-init aos-animate"
      data-aos="fade-up"
      data-testid="card-lottie-link"
    >
      <div
        class="grid-lottie__grid"
      />
    </div>
  </section>
</div>
`;
